--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "kartik-v/yii2-validators": "dev-master",
         "yii2mod/yii2-sweet-alert": "^1.3",
         "bower-asset/sweetalert2": "^7.25.0",
-        "dixonsatit/yii2-thai-year-formatter": "*"
+        "dixonsatit/yii2-thai-year-formatter": "*",
+        "linecorp/line-bot-sdk": "^4.5",
+        "monolog/monolog": "^2.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
