--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "dixonsatit/yii2-thai-year-formatter": "*",
         "linecorp/line-bot-sdk": "^4.5",
         "monolog/monolog": "^2.1",
-        "yiisoft/yii2-httpclient": "*"
+        "yiisoft/yii2-httpclient": "*",
+        "dektrium/yii2-user": "^0.9.14"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -82,7 +83,6 @@
     ],
     "replace": {
         "bower-asset/inputmask": ">=3.2.0",
-        "bower-asset/punycode": ">=1.3.0",
-        "bower-asset/yii2-pjax": ">=2.0.0"
+        "bower-asset/punycode": ">=1.3.0"
     }
 }
