--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "datatables.net": "^1.10.23",
+    "datatables.net-dt": "^1.10.23",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.19",
     "sweetalert2": "^9.17.0"
